@@ -1655,7 +1655,8 @@ void OrthoPushMatrix(PyMOLGlobals *G)
     glMatrixMode(GL_MODELVIEW);
     glPushMatrix();
     glLoadIdentity();
-    glTranslatef(0.33F,0.33F,0.0F); /* this generates better rasterization on macs */
+    glTranslatef(0.33F,0.33F,0.0F); /* this generates better 
+                                       rasterization on macs */
 
     glDisable(GL_ALPHA_TEST);
     glDisable(GL_LIGHTING);
